--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
   <script> 
     async function getjsonmap() {
-      const origin = location.origin
+      const origin = location.href
       const res = await fetch(origin+"/jsonmap.txt");
       const jsonmap = await res.text(); 
       return jsonmap;
     };
     async function getjson(jsonmap) {
-        const origin = location.origin
+        const origin = location.href
         const jsonpath = await fetch(origin+jsonmap+".json"); 
         const json = await jsonpath.json();
         return json;
@@ -103,7 +103,7 @@
          newchannel = document.getElementById("channel");
          newchannel.hidden = true;
          getjson("/"+channel).then((json) =>{
-            history.pushState(null, "", "/"+channel);
+            history.pushState(null, "", location.pathname+channel);
             let videopage = document.getElementById("videopage");
             selectsort = document.createElement("select");
             selectsort.id = "selectsort";
