--- a/404.html
+++ b/404.html
@@ -52,103 +52,7 @@
   <div id="videopage"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
   <script> 
-    async function getjsonmap() {
-      const origin = location.href
-      const res = await fetch(origin+"/jsonmap.txt");
-      const jsonmap = await res.text(); 
-      return jsonmap;
-    };
-    async function getjson(jsonmap) {
-        const origin = location.href
-        const jsonpath = await fetch(origin+jsonmap+".json"); 
-        const json = await jsonpath.json();
-        return json;
-    };
-    getjsonmap().then((jsonmap) =>{  
-      function makechannel(){
-      let jsonpath = jsonmap.split("\n");  
-      let channel = document.getElementById("channel");
-      for (let i = 0; i<jsonpath.length; i++){
-       const newchannel = document.createElement("input");
-       newchannel.id = String(jsonpath[i].slice(1));
-       newchannel.type = "button";
-       newchannel.value = String(jsonpath[i].slice(1));
-       newchannel.onclick= function(){selectchannel(newchannel.id)};
-       channel.appendChild(newchannel);
-       }; }; //end makechannel
-
-      function playvideo(videoid){
-      history.pushState(null, "", location.pathname + "/"+videoid);
-      const videopage = document.getElementById("videopage");
-      videopage.innerHTML=""
-      const player = document.createElement("video")
-      player.height=500
-      player.id=videoid
-      player.controls=true
-      videopage.appendChild(player)
-      const video = document.getElementById(videoid);
-      if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource(location.href+".m3u8");       // ← ここで変数を使う
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, function () {
-        video.play();
-        });
-       }};
-       function selectchannel(channel){
-         newchannel = document.getElementById("channel");
-         newchannel.hidden = true;
-         getjson("/"+channel).then((json) =>{
-            history.pushState(null, "", location.pathname+channel);
-            let videopage = document.getElementById("videopage");
-            selectsort = document.createElement("select");
-            selectsort.id = "selectsort";
-            selectsort.innerHTML = '<option value="0" selected>投稿日順</option><option value="1">再生回数順</option>';
-            videopage.appendChild(selectsort);
-            button = document.createElement("input");
-            button.type = "button";
-            button.value = "戻る";
-            button.onclick = function(){backchannel()}
-            videopage.appendChild(button);
-            function backchannel(){
-              videopage.innerHTML="";
-              newchannel.hidden = false;
-            }
-            function sortByViews(){
-              return json.sort((a, b) =>  (b.video_aggregate_info?.total_views ?? 0) - (a.video_aggregate_info?.total_views ?? 0));
-            };
-            function sortByDate(){
-              return json.sort((a, b) =>new Date(b.display_date) - new Date(a.display_date));
-            };
-
-
-            function seelist(sortjson){
-              videopage.innerHTML = "";
-              videopage.appendChild(selectsort);
-              videopage.appendChild(button)
-              for (let i = 0; i<json.length; i++){
-                let video = document.createElement("div");
-                video.onclick = function(){playvideo(String(json[i].content_code))}
-                video.textContent = String(sortjson[i].title);
-                videopage.appendChild(video);
-                const thumbnail = document.createElement("img");
-                thumbnail.src = String(sortjson[i].thumbnail_url);
-                video.appendChild(thumbnail);
-              }
-            }; 
-            seelist(sortByDate());
-            var selectsort = document.getElementById("selectsort");
-            selectsort.onchange = function(){
-              if(this.value == 1){seelist(sortByViews())};
-              if(this.value == 0){seelist(sortByDate())};
-            };//end 
-        }); //getjson
-       }//selectchannel  
-      if(location.pathname.split("/").length == 3){
-        playvideo(location.pathname.split("/")[2]);
-      }else{
-      seelist(location.pathname.replace("/ThisIsNotNSFW/",""));};
-    });
+    alert(location.href.split("/"));
   </script>
 
 
