--- a/404.html
+++ b/404.html
@@ -46,13 +46,14 @@
 </head>
 
 <body>
+  ここにはまだ何もないようだ。
   <div id="toppage">
   <div id="channel"> </div>
   </div>
   <div id="videopage"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
   <script> 
-    alert(location.href.split("/"));
+    alert(location.pathname.split("/"));
   </script>
 
 
