--- a/404.html
+++ b/404.html
@@ -55,10 +55,14 @@
   <script> 
     pathname = location.pathname.slice(1, location.pathname.length - 1).split("/")
     if(pathname.length==2){
-      alert("channel page")
-    }else{
-      alert("videopage")
-    }
+        seechannel(pathname[1]) 
+      }else{
+    if(pathbame.length==3){
+       if(pathname[2]="nicochannel.jp"){
+        seechannel(pathname[2]+"/"+pathname[3])
+      }else{
+         playvideo(pathname[3])
+    }}
     
   </script>
 
