--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <title>Page Not Found</title>
 <script>
   // 存在しないページにアクセスしたらトップに飛ばす
-  window.location.href = "/";
+  window.location.href = "/ThisIsNotNSFW/";
 </script>
 </head>
 <body>
